used relative path

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="main-container">
         <div class="top-container">
-            <img src="/myWeatherSite/images/logo.png" class="logo">
+            <img src="./images/logo.png" class="logo">
             <div class="city-container">
                 <span class="position-icon"></span>
                 <span id="now-city"></span>
@@ -120,8 +120,8 @@
                         <div class="day">昨天</div>
                         <div class="date">01月25日</div>
                         <div class="day-weather">小雨</div>
-                        <img class="day-icon" src="/icon/little/day/00.png"></img>
-                        <img class="night-icon" src="/icon/little/night/00.png"></img>
+                        <img class="day-icon" src="./icon/little/day/00.png"></img>
+                        <img class="night-icon" src="./icon/little/night/00.png"></img>
                         <div class="night-weather">小雨</div>
                         <div class="wind-24h">北风&nbsp;3级</div>
                     </li>
@@ -129,8 +129,8 @@
                         <div class="day">今天</div>
                         <div class="date">01月25日</div>
                         <div class="day-weather">小雨</div>
-                        <img class="day-icon" src="/icon/little/day/00.png"></img>
-                        <img class="night-icon" src="/icon/little/night/00.png"></img>
+                        <img class="day-icon" src="./icon/little/day/00.png"></img>
+                        <img class="night-icon" src="./icon/little/night/00.png"></img>
                         <div class="night-weather">小雨</div>
                         <div class="wind-24h">北风&nbsp;3级</div>
                     </li>
@@ -138,8 +138,8 @@
                         <div class="day">明天</div>
                         <div class="date">01月25日</div>
                         <div class="day-weather">小雨</div>
-                        <img class="day-icon" src="/icon/little/day/00.png"></img>
-                        <img class="night-icon" src="/icon/little/night/00.png"></img>
+                        <img class="day-icon" src="./icon/little/day/00.png"></img>
+                        <img class="night-icon" src="./icon/little/night/00.png"></img>
                         <div class="night-weather">小雨</div>
                         <div class="wind-24h">北风&nbsp;3级</div>
                     </li>
@@ -147,8 +147,8 @@
                         <div class="day">后天</div>
                         <div class="date">01月25日</div>
                         <div class="day-weather">小雨</div>
-                        <img class="day-icon" src="/icon/little/day/00.png"></img>
-                        <img class="night-icon" src="/icon/little/night/00.png"></img>
+                        <img class="day-icon" src="./icon/little/day/00.png"></img>
+                        <img class="night-icon" src="./icon/little/night/00.png"></img>
                         <div class="night-weather">小雨</div>
                         <div class="wind-24h">北风&nbsp;3级</div>
                     </li>
@@ -156,8 +156,8 @@
                         <div class="day">昨天</div>
                         <div class="date">01月25日</div>
                         <div class="day-weather">小雨</div>
-                        <img class="day-icon" src="/icon/little/day/00.png"></img>
-                        <img class="night-icon" src="/icon/little/night/00.png"></img>
+                        <img class="day-icon" src="./icon/little/day/00.png"></img>
+                        <img class="night-icon" src="./icon/little/night/00.png"></img>
                         <div class="night-weather">小雨</div>
                         <div class="wind-24h">北风&nbsp;3级</div>
                     </li>
@@ -165,8 +165,8 @@
                         <div class="day">昨天</div>
                         <div class="date">01月25日</div>
                         <div class="day-weather">小雨</div>
-                        <img class="day-icon" src="/icon/little/day/00.png"></img>
-                        <img class="night-icon" src="/icon/little/night/00.png"></img>
+                        <img class="day-icon" src="./icon/little/day/00.png"></img>
+                        <img class="night-icon" src="./icon/little/night/00.png"></img>
                         <div class="night-weather">小雨</div>
                         <div class="wind-24h">北风&nbsp;3级</div>
                     </li>
@@ -174,8 +174,8 @@
                         <div class="day">昨天</div>
                         <div class="date">01月25日</div>
                         <div class="day-weather">小雨</div>
-                        <img class="day-icon" src="/icon/little/day/00.png"></img>
-                        <img class="night-icon" src="/icon/little/night/00.png"></img>
+                        <img class="day-icon" src="./icon/little/day/00.png"></img>
+                        <img class="night-icon" src="./icon/little/night/00.png"></img>
                         <div class="night-weather">小雨</div>
                         <div class="wind-24h">北风&nbsp;3级</div>
                     </li>
@@ -183,8 +183,8 @@
                         <div class="day">昨天</div>
                         <div class="date">01月25日</div>
                         <div class="day-weather">小雨</div>
-                        <img class="day-icon" src="/icon/little/day/00.png"></img>
-                        <img class="night-icon" src="/icon/little/night/00.png"></img>
+                        <img class="day-icon" src="./icon/little/day/00.png"></img>
+                        <img class="night-icon" src="./icon/little/night/00.png"></img>
                         <div class="night-weather">小雨</div>
                         <div class="wind-24h">北风&nbsp;3级</div>
                     </li>
