--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="city-container">
                 <span class="position-icon"></span>
                 <span id="now-city"></span>
-                <input id="input" type="input" value = "广西 梧州 藤县"placeholder="广西 梧州 藤县">
+                <input id="input" type="input" value="广西 梧州 藤县" placeholder="广西 梧州 藤县">
                 <button id="search-city">搜索</button>
             </div>
         </div>
@@ -41,166 +41,170 @@
                     <span id="tips-key"></span>
                 </div>
             </div>
-            <img id="weather-icon" >
-        </div>
-        <div class="detail">
-            <div class="detail-container" id="hours-container">
-                <div id="hours-title-container">
-                    <div id="hours-title">●&nbsp;逐小时预报</div>
-                    <div id="hours-down"></div>
-                    <div id="hours-up"></div>
-                </div>
-                <div id="hours">
-                    <div class="hours">
-                        <div class="hours-time"id="time0"></div>
-                        <img class="hours-icon"id="icon0">
-                        <div class="hours-tempture"id="degree0"></div>
-                    </div>
-                    <div class="hours">
-                        <div class="hours-time" id="time1"></div>
-                        <img class="hours-icon" id="icon1">
-                        <div class="hours-tempture" id="degree1"></div>
-                    </div>
-                    <div class="hours">
-                        <div class="hours-time" id="time2"></div>
-                        <img class="hours-icon" id="icon2">
-                        <div class="hours-tempture" id="degree2"></div>
-                    </div>
-                    <div class="hours">
-                        <div class="hours-time" id="time3"></div>
-                        <img class="hours-icon" id="icon3">
-                        <div class="hours-tempture"id="degree3"></div>
-                    </div>
-                    <div class="hours">
-                        <div class="hours-time"id="time4"></div>
-                        <img class="hours-icon"id="icon4">
-                        <div class="hours-tempture"id="degree4"></div>
-                    </div>
-                    <div class="hours">
-                        <div class="hours-time"id="time5"></div>
-                        <img class="hours-icon"id="icon5">
-                        <div class="hours-tempture"id="degree5"></div>
-                    </div>
-                    <div class="hours">
-                        <div class="hours-time"id="time6"></div>
-                        <img class="hours-icon"id="icon6">
-                        <div class="hours-tempture"id="degree6"></div>
-                    </div>
-                    <div class="hours">
-                        <div class="hours-time"id="time7"></div>
-                        <img class="hours-icon"id="icon7">
-                        <div class="hours-tempture"id="degree7"></div>
-                    </div>
-                    <div class="hours">
-                        <div class="hours-time"id="time8"></div>
-                        <img class="hours-icon"id="icon8">
-                        <div class="hours-tempture"id="degree8"></div>
-                    </div>
-                    <div class="hours">
-                        <div class="hours-time"id="time9"></div>
-                        <img class="hours-icon"id="icon9">
-                        <div class="hours-tempture"id="degree9"></div>
-                    </div>
-                    <div class="hours">
-                        <div class="hours-time"id="time10"></div>
-                        <img class="hours-icon"id="icon10">
-                        <div class="hours-tempture"id="degree10"></div>
-                    </div>
-                    <div class="hours">
-                        <div class="hours-time"id="time11"></div>
-                        <img class="hours-icon"id="icon11">
-                        <div class="hours-tempture"id="degree11"></div>
-                    </div>
-                </div>
-            </div>
-            <div class="detail-container" id="week-container">
-                <div id="week-title">●&nbsp;7日天气预报</div>
-                <ol>
-                    <li class="days" id="day0">
-                        <div class="day">昨天</div>
-                        <div class="date">01月25日</div>
-                        <div class="day-weather">小雨</div>
-                        <img class="day-icon" src="./icon/little/day/00.png"></img>
-                        <img class="night-icon" src="./icon/little/night/00.png"></img>
-                        <div class="night-weather">小雨</div>
-                        <div class="wind-24h">北风&nbsp;3级</div>
-                    </li>
-                    <li class="days" id="day1">
-                        <div class="day">今天</div>
-                        <div class="date">01月25日</div>
-                        <div class="day-weather">小雨</div>
-                        <img class="day-icon" src="./icon/little/day/00.png"></img>
-                        <img class="night-icon" src="./icon/little/night/00.png"></img>
-                        <div class="night-weather">小雨</div>
-                        <div class="wind-24h">北风&nbsp;3级</div>
-                    </li>
-                    <li class="days" id="day2">
-                        <div class="day">明天</div>
-                        <div class="date">01月25日</div>
-                        <div class="day-weather">小雨</div>
-                        <img class="day-icon" src="./icon/little/day/00.png"></img>
-                        <img class="night-icon" src="./icon/little/night/00.png"></img>
-                        <div class="night-weather">小雨</div>
-                        <div class="wind-24h">北风&nbsp;3级</div>
-                    </li>
-                    <li class="days" id="day3">
-                        <div class="day">后天</div>
-                        <div class="date">01月25日</div>
-                        <div class="day-weather">小雨</div>
-                        <img class="day-icon" src="./icon/little/day/00.png"></img>
-                        <img class="night-icon" src="./icon/little/night/00.png"></img>
-                        <div class="night-weather">小雨</div>
-                        <div class="wind-24h">北风&nbsp;3级</div>
-                    </li>
-                    <li class="days" id="day4">
-                        <div class="day">昨天</div>
-                        <div class="date">01月25日</div>
-                        <div class="day-weather">小雨</div>
-                        <img class="day-icon" src="./icon/little/day/00.png"></img>
-                        <img class="night-icon" src="./icon/little/night/00.png"></img>
-                        <div class="night-weather">小雨</div>
-                        <div class="wind-24h">北风&nbsp;3级</div>
-                    </li>
-                    <li class="days" id="day5">
-                        <div class="day">昨天</div>
-                        <div class="date">01月25日</div>
-                        <div class="day-weather">小雨</div>
-                        <img class="day-icon" src="./icon/little/day/00.png"></img>
-                        <img class="night-icon" src="./icon/little/night/00.png"></img>
-                        <div class="night-weather">小雨</div>
-                        <div class="wind-24h">北风&nbsp;3级</div>
-                    </li>
-                    <li class="days" id="day6">
-                        <div class="day">昨天</div>
-                        <div class="date">01月25日</div>
-                        <div class="day-weather">小雨</div>
-                        <img class="day-icon" src="./icon/little/day/00.png"></img>
-                        <img class="night-icon" src="./icon/little/night/00.png"></img>
-                        <div class="night-weather">小雨</div>
-                        <div class="wind-24h">北风&nbsp;3级</div>
-                    </li>
-                    <li class="days" id="day7">
-                        <div class="day">昨天</div>
-                        <div class="date">01月25日</div>
-                        <div class="day-weather">小雨</div>
-                        <img class="day-icon" src="./icon/little/day/00.png"></img>
-                        <img class="night-icon" src="./icon/little/night/00.png"></img>
-                        <div class="night-weather">小雨</div>
-                        <div class="wind-24h">北风&nbsp;3级</div>
-                    </li>
-                </ol>
-            </div>
-            <div id="livingIndex-container">
-                <div id="livingIndex-title">●&nbsp;生活指数</div>
-                <div class="detail-container livingIndexDetailLeft"></div>
-                <div class="detail-container livingIndexDetailRight"></div>
-                <div class="detail-container livingIndexDetailLeft"></div>
-                <div class="detail-container livingIndexDetailRight"></div>
-                <div class="detail-container livingIndexDetailLeft"></div>
-                <div class="detail-container livingIndexDetailRight"></div>
-            </div>
+            <img id="weather-icon">
         </div>
     </div>
+    <div class="detail">
+        <div class="detail-container" id="hours-container">
+            <div id="hours-title-container">
+                <div id="hours-title">●&nbsp;逐小时预报</div>
+                <div id="hours-down"></div>
+                <div id="hours-up"></div>
+            </div>
+            <div id="hours">
+                <div class="hours">
+                    <div class="hours-time" id="time0"></div>
+                    <img class="hours-icon" id="icon0">
+                    <div class="hours-tempture" id="degree0"></div>
+                </div>
+                <div class="hours">
+                    <div class="hours-time" id="time1"></div>
+                    <img class="hours-icon" id="icon1">
+                    <div class="hours-tempture" id="degree1"></div>
+                </div>
+                <div class="hours">
+                    <div class="hours-time" id="time2"></div>
+                    <img class="hours-icon" id="icon2">
+                    <div class="hours-tempture" id="degree2"></div>
+                </div>
+                <div class="hours">
+                    <div class="hours-time" id="time3"></div>
+                    <img class="hours-icon" id="icon3">
+                    <div class="hours-tempture" id="degree3"></div>
+                </div>
+                <div class="hours">
+                    <div class="hours-time" id="time4"></div>
+                    <img class="hours-icon" id="icon4">
+                    <div class="hours-tempture" id="degree4"></div>
+                </div>
+                <div class="hours">
+                    <div class="hours-time" id="time5"></div>
+                    <img class="hours-icon" id="icon5">
+                    <div class="hours-tempture" id="degree5"></div>
+                </div>
+                <div class="hours">
+                    <div class="hours-time" id="time6"></div>
+                    <img class="hours-icon" id="icon6">
+                    <div class="hours-tempture" id="degree6"></div>
+                </div>
+                <div class="hours">
+                    <div class="hours-time" id="time7"></div>
+                    <img class="hours-icon" id="icon7">
+                    <div class="hours-tempture" id="degree7"></div>
+                </div>
+                <div class="hours">
+                    <div class="hours-time" id="time8"></div>
+                    <img class="hours-icon" id="icon8">
+                    <div class="hours-tempture" id="degree8"></div>
+                </div>
+                <div class="hours">
+                    <div class="hours-time" id="time9"></div>
+                    <img class="hours-icon" id="icon9">
+                    <div class="hours-tempture" id="degree9"></div>
+                </div>
+                <div class="hours">
+                    <div class="hours-time" id="time10"></div>
+                    <img class="hours-icon" id="icon10">
+                    <div class="hours-tempture" id="degree10"></div>
+                </div>
+                <div class="hours">
+                    <div class="hours-time" id="time11"></div>
+                    <img class="hours-icon" id="icon11">
+                    <div class="hours-tempture" id="degree11"></div>
+                </div>
+            </div>
+        </div>
+        <div class="detail-container" id="week-container">
+            <div id="week-title">●&nbsp;7日天气预报</div>
+            <ol>
+                <li class="days" id="day0">
+                    <div class="day">昨天</div>
+                    <div class="date">01月25日</div>
+                    <div class="day-weather">小雨</div>
+                    <img class="day-icon" src="./icon/little/day/00.png"></img>
+                    <img class="night-icon" src="./icon/little/night/00.png"></img>
+                    <div class="night-weather">小雨</div>
+                    <div class="wind-24h">北风&nbsp;3级</div>
+                </li>
+                <li class="days" id="day1">
+                    <div class="day">今天</div>
+                    <div class="date">01月25日</div>
+                    <div class="day-weather">小雨</div>
+                    <img class="day-icon" src="./icon/little/day/00.png"></img>
+                    <img class="night-icon" src="./icon/little/night/00.png"></img>
+                    <div class="night-weather">小雨</div>
+                    <div class="wind-24h">北风&nbsp;3级</div>
+                </li>
+                <li class="days" id="day2">
+                    <div class="day">明天</div>
+                    <div class="date">01月25日</div>
+                    <div class="day-weather">小雨</div>
+                    <img class="day-icon" src="./icon/little/day/00.png"></img>
+                    <img class="night-icon" src="./icon/little/night/00.png"></img>
+                    <div class="night-weather">小雨</div>
+                    <div class="wind-24h">北风&nbsp;3级</div>
+                </li>
+                <li class="days" id="day3">
+                    <div class="day">后天</div>
+                    <div class="date">01月25日</div>
+                    <div class="day-weather">小雨</div>
+                    <img class="day-icon" src="./icon/little/day/00.png"></img>
+                    <img class="night-icon" src="./icon/little/night/00.png"></img>
+                    <div class="night-weather">小雨</div>
+                    <div class="wind-24h">北风&nbsp;3级</div>
+                </li>
+                <li class="days" id="day4">
+                    <div class="day">昨天</div>
+                    <div class="date">01月25日</div>
+                    <div class="day-weather">小雨</div>
+                    <img class="day-icon" src="./icon/little/day/00.png"></img>
+                    <img class="night-icon" src="./icon/little/night/00.png"></img>
+                    <div class="night-weather">小雨</div>
+                    <div class="wind-24h">北风&nbsp;3级</div>
+                </li>
+                <li class="days" id="day5">
+                    <div class="day">昨天</div>
+                    <div class="date">01月25日</div>
+                    <div class="day-weather">小雨</div>
+                    <img class="day-icon" src="./icon/little/day/00.png"></img>
+                    <img class="night-icon" src="./icon/little/night/00.png"></img>
+                    <div class="night-weather">小雨</div>
+                    <div class="wind-24h">北风&nbsp;3级</div>
+                </li>
+                <li class="days" id="day6">
+                    <div class="day">昨天</div>
+                    <div class="date">01月25日</div>
+                    <div class="day-weather">小雨</div>
+                    <img class="day-icon" src="./icon/little/day/00.png"></img>
+                    <img class="night-icon" src="./icon/little/night/00.png"></img>
+                    <div class="night-weather">小雨</div>
+                    <div class="wind-24h">北风&nbsp;3级</div>
+                </li>
+                <li class="days" id="day7">
+                    <div class="day">昨天</div>
+                    <div class="date">01月25日</div>
+                    <div class="day-weather">小雨</div>
+                    <img class="day-icon" src="./icon/little/day/00.png"></img>
+                    <img class="night-icon" src="./icon/little/night/00.png"></img>
+                    <div class="night-weather">小雨</div>
+                    <div class="wind-24h">北风&nbsp;3级</div>
+                </li>
+            </ol>
+            <div id="chart-container">
+                <canvas id="chart-canvas" width="740" height="174"></canvas>
+            </div>
+        </div>
+        <div id="livingIndex-container">
+            <div id="livingIndex-title">●&nbsp;生活指数</div>
+            <div class="detail-container livingIndexDetailLeft"></div>
+            <div class="detail-container livingIndexDetailRight"></div>
+            <div class="detail-container livingIndexDetailLeft"></div>
+            <div class="detail-container livingIndexDetailRight"></div>
+            <div class="detail-container livingIndexDetailLeft"></div>
+            <div class="detail-container livingIndexDetailRight"></div>
+        </div>
+    </div>
+
     <script src="./js/index.js" type="module"></script>
 </body>
 
