made request asynchronous.

--- a/index.html
+++ b/index.html
@@ -114,94 +114,96 @@
                 </div>
             </div>
         </div>
-        <div class="detail-container" id="week-container">
-            <div id="week-title">●&nbsp;7日天气预报</div>
-            <ol>
-                <li class="days" id="day0">
-                    <div class="day">昨天</div>
-                    <div class="date">01月25日</div>
-                    <div class="day-weather">小雨</div>
-                    <img class="day-icon" src="./icon/little/day/00.png"></img>
-                    <img class="night-icon" src="./icon/little/night/00.png"></img>
-                    <div class="night-weather">小雨</div>
-                    <div class="wind-24h">北风&nbsp;3级</div>
-                </li>
-                <li class="days" id="day1">
-                    <div class="day">今天</div>
-                    <div class="date">01月25日</div>
-                    <div class="day-weather">小雨</div>
-                    <img class="day-icon" src="./icon/little/day/00.png"></img>
-                    <img class="night-icon" src="./icon/little/night/00.png"></img>
-                    <div class="night-weather">小雨</div>
-                    <div class="wind-24h">北风&nbsp;3级</div>
-                </li>
-                <li class="days" id="day2">
-                    <div class="day">明天</div>
-                    <div class="date">01月25日</div>
-                    <div class="day-weather">小雨</div>
-                    <img class="day-icon" src="./icon/little/day/00.png"></img>
-                    <img class="night-icon" src="./icon/little/night/00.png"></img>
-                    <div class="night-weather">小雨</div>
-                    <div class="wind-24h">北风&nbsp;3级</div>
-                </li>
-                <li class="days" id="day3">
-                    <div class="day">后天</div>
-                    <div class="date">01月25日</div>
-                    <div class="day-weather">小雨</div>
-                    <img class="day-icon" src="./icon/little/day/00.png"></img>
-                    <img class="night-icon" src="./icon/little/night/00.png"></img>
-                    <div class="night-weather">小雨</div>
-                    <div class="wind-24h">北风&nbsp;3级</div>
-                </li>
-                <li class="days" id="day4">
-                    <div class="day">昨天</div>
-                    <div class="date">01月25日</div>
-                    <div class="day-weather">小雨</div>
-                    <img class="day-icon" src="./icon/little/day/00.png"></img>
-                    <img class="night-icon" src="./icon/little/night/00.png"></img>
-                    <div class="night-weather">小雨</div>
-                    <div class="wind-24h">北风&nbsp;3级</div>
-                </li>
-                <li class="days" id="day5">
-                    <div class="day">昨天</div>
-                    <div class="date">01月25日</div>
-                    <div class="day-weather">小雨</div>
-                    <img class="day-icon" src="./icon/little/day/00.png"></img>
-                    <img class="night-icon" src="./icon/little/night/00.png"></img>
-                    <div class="night-weather">小雨</div>
-                    <div class="wind-24h">北风&nbsp;3级</div>
-                </li>
-                <li class="days" id="day6">
-                    <div class="day">昨天</div>
-                    <div class="date">01月25日</div>
-                    <div class="day-weather">小雨</div>
-                    <img class="day-icon" src="./icon/little/day/00.png"></img>
-                    <img class="night-icon" src="./icon/little/night/00.png"></img>
-                    <div class="night-weather">小雨</div>
-                    <div class="wind-24h">北风&nbsp;3级</div>
-                </li>
-                <li class="days" id="day7">
-                    <div class="day">昨天</div>
-                    <div class="date">01月25日</div>
-                    <div class="day-weather">小雨</div>
-                    <img class="day-icon" src="./icon/little/day/00.png"></img>
-                    <img class="night-icon" src="./icon/little/night/00.png"></img>
-                    <div class="night-weather">小雨</div>
-                    <div class="wind-24h">北风&nbsp;3级</div>
-                </li>
-            </ol>
-            <div id="chart-container">
-                <canvas id="chart-canvas" width="740" height="174"></canvas>
+        <div id="week-index-container">
+            <div class="detail-container" id="week-container">
+                <div id="week-title">●&nbsp;7日天气预报</div>
+                <ol>
+                    <li class="days" id="day0">
+                        <div class="day">昨天</div>
+                        <div class="date"></div>
+                        <div class="day-weather"></div>
+                        <img class="day-icon"></img>
+                        <img class="night-icon"></img>
+                        <div class="night-weather"></div>
+                        <div class="wind-24h"></div>
+                    </li>
+                    <li class="days" id="day1">
+                        <div class="day">今天</div>
+                        <div class="date"></div>
+                        <div class="day-weather"></div>
+                        <img class="day-icon"></img>
+                        <img class="night-icon"></img>
+                        <div class="night-weather"></div>
+                        <div class="wind-24h"></div>
+                    </li>
+                    <li class="days" id="day2">
+                        <div class="day">明天</div>
+                        <div class="date"></div>
+                        <div class="day-weather"></div>
+                        <img class="day-icon"></img>
+                        <img class="night-icon"></img>
+                        <div class="night-weather"></div>
+                        <div class="wind-24h"></div>
+                    </li>
+                    <li class="days" id="day3">
+                        <div class="day">后天</div>
+                        <div class="date"></div>
+                        <div class="day-weather"></div>
+                        <img class="day-icon"></img>
+                        <img class="night-icon"></img>
+                        <div class="night-weather"></div>
+                        <div class="wind-24h"></div>
+                    </li>
+                    <li class="days" id="day4">
+                        <div class="day"></div>
+                        <div class="date"></div>
+                        <div class="day-weather"></div>
+                        <img class="day-icon"></img>
+                        <img class="night-icon"></img>
+                        <div class="night-weather"></div>
+                        <div class="wind-24h"></div>
+                    </li>
+                    <li class="days" id="day5">
+                        <div class="day"></div>
+                        <div class="date"></div>
+                        <div class="day-weather"></div>
+                        <img class="day-icon"></img>
+                        <img class="night-icon"></img>
+                        <div class="night-weather"></div>
+                        <div class="wind-24h"></div>
+                    </li>
+                    <li class="days" id="day6">
+                        <div class="day"></div>
+                        <div class="date"></div>
+                        <div class="day-weather"></div>
+                        <img class="day-icon"></img>
+                        <img class="night-icon"></img>
+                        <div class="night-weather"></div>
+                        <div class="wind-24h"></div>
+                    </li>
+                    <li class="days" id="day7">
+                        <div class="day"></div>
+                        <div class="date"></div>
+                        <div class="day-weather"></div>
+                        <img class="day-icon"></img>
+                        <img class="night-icon"></img>
+                        <div class="night-weather"></div>
+                        <div class="wind-24h"></div>
+                    </li>
+                </ol>
+                <div id="chart-container">
+                    <canvas id="chart-canvas" width="740" height="174"></canvas>
+                </div>
             </div>
-        </div>
-        <div id="livingIndex-container">
-            <div id="livingIndex-title">●&nbsp;生活指数</div>
-            <div class="detail-container livingIndexDetailLeft"></div>
-            <div class="detail-container livingIndexDetailRight"></div>
-            <div class="detail-container livingIndexDetailLeft"></div>
-            <div class="detail-container livingIndexDetailRight"></div>
-            <div class="detail-container livingIndexDetailLeft"></div>
-            <div class="detail-container livingIndexDetailRight"></div>
+            <div id="livingIndex-container">
+                <div id="livingIndex-title">●&nbsp;生活指数</div>
+                <div class="detail-container livingIndexDetailLeft" id="index0"></div>
+                <div class="detail-container livingIndexDetailRight" id="index1"></div>
+                <div class="detail-container livingIndexDetailLeft" id="index2"></div>
+                <div class="detail-container livingIndexDetailRight" id="index3"></div>
+                <div class="detail-container livingIndexDetailLeft" id="index4"></div>
+                <div class="detail-container livingIndexDetailRight" id="index5"></div>
+            </div>
         </div>
     </div>
 
