--- a/index.html
+++ b/index.html
@@ -52,62 +52,62 @@
                 <div id="hours-up"></div>
             </div>
             <div id="hours">
-                <div class="hours">
+                <div class="hours animated">
                     <div class="hours-time" id="time0"></div>
                     <img class="hours-icon" id="icon0">
                     <div class="hours-tempture" id="degree0"></div>
                 </div>
-                <div class="hours">
+                <div class="hours animated">
                     <div class="hours-time" id="time1"></div>
                     <img class="hours-icon" id="icon1">
                     <div class="hours-tempture" id="degree1"></div>
                 </div>
-                <div class="hours">
+                <div class="hours animated">
                     <div class="hours-time" id="time2"></div>
                     <img class="hours-icon" id="icon2">
                     <div class="hours-tempture" id="degree2"></div>
                 </div>
-                <div class="hours">
+                <div class="hours animated">
                     <div class="hours-time" id="time3"></div>
                     <img class="hours-icon" id="icon3">
                     <div class="hours-tempture" id="degree3"></div>
                 </div>
-                <div class="hours">
+                <div class="hours animated">
                     <div class="hours-time" id="time4"></div>
                     <img class="hours-icon" id="icon4">
                     <div class="hours-tempture" id="degree4"></div>
                 </div>
-                <div class="hours">
+                <div class="hours animated">
                     <div class="hours-time" id="time5"></div>
                     <img class="hours-icon" id="icon5">
                     <div class="hours-tempture" id="degree5"></div>
                 </div>
-                <div class="hours">
+                <div class="hours animated">
                     <div class="hours-time" id="time6"></div>
                     <img class="hours-icon" id="icon6">
                     <div class="hours-tempture" id="degree6"></div>
                 </div>
-                <div class="hours">
+                <div class="hours animated">
                     <div class="hours-time" id="time7"></div>
                     <img class="hours-icon" id="icon7">
                     <div class="hours-tempture" id="degree7"></div>
                 </div>
-                <div class="hours">
+                <div class="hours animated">
                     <div class="hours-time" id="time8"></div>
                     <img class="hours-icon" id="icon8">
                     <div class="hours-tempture" id="degree8"></div>
                 </div>
-                <div class="hours">
+                <div class="hours animated">
                     <div class="hours-time" id="time9"></div>
                     <img class="hours-icon" id="icon9">
                     <div class="hours-tempture" id="degree9"></div>
                 </div>
-                <div class="hours">
+                <div class="hours animated">
                     <div class="hours-time" id="time10"></div>
                     <img class="hours-icon" id="icon10">
                     <div class="hours-tempture" id="degree10"></div>
                 </div>
-                <div class="hours">
+                <div class="hours animated">
                     <div class="hours-time" id="time11"></div>
                     <img class="hours-icon" id="icon11">
                     <div class="hours-tempture" id="degree11"></div>
