--- a/index.html
+++ b/index.html
@@ -197,12 +197,60 @@
             </div>
             <div id="livingIndex-container">
                 <div id="livingIndex-title">●&nbsp;生活指数</div>
-                <div class="detail-container livingIndexDetailLeft" id="index0"></div>
-                <div class="detail-container livingIndexDetailRight" id="index1"></div>
-                <div class="detail-container livingIndexDetailLeft" id="index2"></div>
-                <div class="detail-container livingIndexDetailRight" id="index3"></div>
-                <div class="detail-container livingIndexDetailLeft" id="index4"></div>
-                <div class="detail-container livingIndexDetailRight" id="index5"></div>
+                <div class="detail-container livingIndexDetail Left" id="index0">
+                    <div class="first-page">
+                        <div class="icon"></div>
+                        <div class="ct-index"></div>
+                    </div>
+                    <div class="second-page">
+                        <span class="detail"></span>
+                    </div>
+                </div>
+                <div class="detail-container livingIndexDetail Right" id="index1">
+                    <div class="first-page">
+                        <div class="icon"></div>
+                        <div class="ct-index"></div>
+                    </div>
+                    <div class="second-page">
+                        <span class="detail"></span>
+                    </div>
+                </div>
+                <div class="detail-container livingIndexDetail Left" id="index2">
+                    <div class="first-page">
+                        <div class="icon"></div>
+                        <div class="ct-index"></div>
+                    </div>
+                    <div class="second-page">
+                        <span class="detail"></span>
+                    </div>
+                </div>
+                <div class="detail-container livingIndexDetail Right" id="index3">
+                    <div class="first-page">
+                        <div class="icon"></div>
+                        <div class="ct-index"></div>
+                    </div>
+                    <div class="second-page">
+                        <span class="detail"></span>
+                    </div>
+                </div>
+                <div class="detail-container livingIndexDetail Left" id="index4">
+                    <div class="first-page">
+                        <div class="icon"></div>
+                        <div class="ct-index"></div>
+                    </div>
+                    <div class="second-page">
+                        <span class="detail"></span>
+                    </div>
+                </div>
+                <div class="detail-container livingIndexDetail Right" id="index5">
+                    <div class="first-page">
+                        <div class="icon"></div>
+                        <div class="ct-index"></div>
+                    </div>
+                    <div class="second-page">
+                        <span class="detail"></span>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
