location api test.

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
             </div>
         </div>
     </div>
-
+    <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.15&key=f87207f91f4706cf799f18c7ed9850ac"></script> 
     <script src="./js/index.js" type="module"></script>
 </body>
 
